# Dowfn

./: Cargo.toml  README.md
dowfn-app/: Cargo.toml
dowfn-app/src/: main.rs
dowfn-app/ui/: main.slint
dowfn-core/: Cargo.toml
dowfn-core/src/: engine.rs  error.rs  lib.rs
dowfn-core/src/download/: downloader.rs  manager.rs  mod.rs
dowfn-core/src/network/: mod.rs
dowfn-core/src/storage/: mod.rs
dowfn-extension/: background.js  manifest.json  popup.html  popup.js
dowfn-native-host/src/: main.rs
dowfn-shared/: Cargo.toml
dowfn-shared/src/: lib.rs  models.rs  protocols.rs
