[package]
name = "dowfn-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dowfn"
path = "src/main.rs"

[dependencies]
dowfn-core = { path = "../dowfn-core" }
dowfn-shared = { path = "../dowfn-shared" }
slint = { version = "1.8", features = ["backend-winit", "renderer-femtovg"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = "5.0"
once_cell = "1.20"
arboard = "3.4"
url = { workspace = true }  # Bu satır eklenmeli

[build-dependencies]
slint-build = "1.8"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }