[package]
name = "dowfn-shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
dirs = "5.0"